--- a/index.html
+++ b/index.html
@@ -16,20 +16,44 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
 <br>
 <div class="row">
    <div class="col-sm-6">
-   <h1>O2lite Websocket Demo</h1>
+   <h1>O2 Web Monitor</h1>
 </div>
 </div>
-<div class="row">
+<br>
+<div class="row" id="ensembleGetter"> 
+   <div class="col-sm-4">
+      <label>Enter host name to connect to.</label>
+      <input type="text" id="hostname" class="form-control">
+
+   </div>
+
+   <div class="col-sm-4">
+      <label>Enter ensemble name to connect with.</label>
+      <input type="text" id="ensembleName" class="form-control">
+
+   </div>
+   <div class="col-sm-4 align-self-end">
+      <button type="button" class="btn btn-secondary" id="connecthost" onclick="o2wsInit()">
+         Connect to o2host.
+       </button>
+   </div>
+
+   </div>
+<div class="row">  
+   <br>
 <div class="col-sm-6" id="connected" hidden>
    
    <p>Succesfully connected to o2host. <i class="fa-regular fa-square-check"></i> </p>
 </div>
 </div>
+
 <br>
+<div id="mainBody" hidden>
+   <hr/>
 <div class="row"><p>To discover all services connected to this O2 host, click here.</p></div>
 <div class="row">
 <div class="col-sm-3">
-<button class="btn btn-secondary" id="viewservices">Discover Services</button>
+<button class="btn btn-secondary" id="viewservices" onclick="viewServices()">Discover Services</button>
 </div>
 <div class="col-sm-3">
 <button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#createServiceModal">
@@ -42,12 +66,11 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
 </div>
 <br>
 <br>
-
+</div>
 <script id="hbsModal" type="text/x-handlebars-template">
    <table class="table">
       <thead>
         <tr>
-          <th scope="col">Time</th>
           <th scope="col">Message</th>
         </tr>
       </thead>
@@ -57,7 +80,6 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
          {{#if this.selected}}
          {{#each this.messages}}
          <tr>
-          <td>{{this.timestamp}}</td>
           <td>{{this.message}}</td>
          </tr>
           {{/each}}
@@ -89,9 +111,10 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
             {{else}} <td>{{this.name}} </td>{{/if}}
 
             <!-- <td>{{this.typespecString}}</td> -->
-             <td>{{this.status}}</td>
+             <td id="serviceStatus">{{this.statusName}}</td>
              <td>
-               <div class="input-group mb-3" style="max-width: 500px;">
+               <div class="input-group mb-3" style="max-width: 700px;">
+                  <input type="text" id="addressPostfix-{{this.name}}" class="form-control" placeholder="Message address">
                   <input type="text" id="messageType-{{this.name}}" class="form-control" placeholder="Message typespec">
                   <input type="text" id="messageGet-{{this.name}}" class="form-control" placeholder="Message to send">
                   <div class="input-group-append">
@@ -99,7 +122,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
                   </div>
                 </div>
             </td>
-            <td><button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#tapModal" id={{this.name}} onclick="tap(this);">Tap</button></td>
+            <td><button type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#tapModal" id={{this.name}} onclick="tapModal(this);">Tap</button></td>
            </tr>
            {{/each}}
          </tbody>
@@ -119,11 +142,17 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
          <h5 class="modal-title" id="tapModalLabel">Tapping Service... Finding Messages</h5>
        </div>
        <div class="modal-body">
-         <div id="tapOutput">
-         </div>
+         <input type="text" id="tapServiceName" class="form-control">
+         <label for="taptype">Choose a tap type:</label>
+         <select class="form-select" name="taptype" id="taptype">
+            <option selected value="K">Keep</option>
+            <option value="R">Reliable</option>
+            <option value="B">Best Effort</option>
+         </select>
        </div>
        <div class="modal-footer">
          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+         <button type="button" class="btn btn-primary" onclick="tap()" data-bs-dismiss="modal">Save changes</button>
        </div>
      </div>
    </div>
@@ -134,7 +163,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
    <div class="modal-dialog modal-dialog-centered" role="document">
      <div class="modal-content">
        <div class="modal-header">
-         <h5 class="modal-title" id="messageModalLabel">All Messages</h5>
+         <h5 class="modal-title" id="messageModalLabel">All Messages</h5> 
        </div>
        <div class="modal-body">
          <div id="modalOutput">
@@ -168,12 +197,23 @@ https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js
        </div>
        <div class="modal-footer">
          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-         <button type="button" class="btn btn-primary" id="createservice" data-bs-dismiss="modal">Save changes</button>
+         <button type="button" class="btn btn-primary" id="createservice" onclick="createService()" data-bs-dismiss="modal">Save changes</button>
        </div>
      </div>
    </div>
  </div>
 
+ <div class="toast-container position-fixed top-0 end-0 p-3">
+   <div id="toast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+     <div class="toast-header">
+       <strong class="me-auto">Alert</strong>
+       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+     </div>
+     <div class="toast-body">
+       Failed to connect to o2host.
+     </div>
+   </div>
+ </div>
 
 
 
